# CARMA3

./: AUTHORS  Makefile.am  README.md  autogen.sh  carma.cfg  carma3-SGE.pl  configure.ac  set_ld_library_path.sh
lib/: FileUtils.pm  Scheduler.pm
lib/FileUtils/: TempDir.pm
lib/Scheduler/: DRMAA.pm
lib/SplitFasta/: SplitFasta.pm  splitFasta.pl
src/: Makefile.am  PhyloNode.cpp  PhyloNode.h  biotools.cpp  biotools.hpp  biotools_blast.cpp  biotools_blast.hpp  biotools_rdp.cpp  biotools_rdp.hpp  carma3.sh  carma_base.cpp  carma_base.hpp  carma_blastnp.cpp  carma_blastnp.hpp  carma_hmmer.cpp  carma_hmmer.hpp  carma_rna.cpp  carma_rna.hpp  getPfamNCBITaxiID.cpp  global.hpp  main.cpp  main.h  matrix.cpp  matrix.hpp  pfam.cpp  pfam.hpp  self_bitscore  tools.cpp  tools.hpp
tools/: PerlTools.pm  checkBLASTChunks.sh  checkChunks.sh  getComparativeTaxonomicProfile.pl  getFunctionalProfile.pl  getTaxonomicProfile.pl  run_incompleted_jobs.pl  splitPfamFasta.pl
